# gitcmd

./: .gitignore  Cargo.toml  README.md
src/: :w  main.rs
src/config/: mod.rs
src/config_io/: mod.rs
src/input_handler/: mod.rs
src/input_parser/: mod.rs
src/parser/: mod.rs
src/terminal/: mod.rs
